Fix hamburger line on mobile

--- a/style.css
+++ b/style.css
@@ -85,6 +85,14 @@ input {
     max-height: 100%;
 }
 
+#hamburger-line {
+    display: inline-block;
+    width: 80%;
+    border: none;
+    border-bottom: 1px solid var(--color-fg);
+    border-radius: 0;
+}
+
 #hamburgerSVG {
     fill: var(--color-fg) !important;
     stroke: var(--color-fg) !important;
